xorg-server (2:1.10.2-1) UNRELEASED; urgency=low

  * New upstream release.
  * Add 20-workaround-36986.diff to avoid test failures on *i386.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 30 May 2011 11:22:21 +0200

xorg-server (2:1.10.1.901-1) experimental; urgency=low

  * New upstream release (1.10.2 rc1):
    - Comes with some Xi fixes.
    - Comes with many GLX fixes.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 07 May 2011 13:27:28 +0200

xorg-server (2:1.10.1-2) unstable; urgency=low

  * Build xserver-xorg-core-udeb on hurd-i386.  Thanks, Samuel Thibault!
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 28 Apr 2011 13:28:58 +0200

xorg-server (2:1.10.1-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 19 Apr 2011 03:08:08 +0200

xorg-server (2:1.10.0.902-1) experimental; urgency=low

  * New upstream release (1.10.1 rc2).

 -- Cyril Brulebois <kibi@debian.org>  Sat, 09 Apr 2011 04:18:28 +0200

xorg-server (2:1.10.0.901-1) experimental; urgency=low

  * New upstream release (1.10.1 rc1).
  * Relax build-dep and dep on x11proto-randr-dev since the XRandR 1.4
    bits were finally reverted upstream.
  * Remove patch: 16-construct-paths-in-doxygen.conf.diff (merged
    upstream).
  * Pass --enable-xcsecurity to the main build to restore the XC-SECURITY
    extension, thanks to Stefan Fritsch's report (Closes: #599657).

 -- Cyril Brulebois <kibi@debian.org>  Wed, 30 Mar 2011 02:22:56 +0200

xorg-server (2:1.9.99.903-1) experimental; urgency=low

  * New upstream release candidate (1.10 rc3).
  * Remove patch: 17-fix-ftbfs-on-sparc.diff (merged upstream).
  * Remove patch: 20-update-gpu-pitch.diff (merged upstream).
  * Refresh patch: 07-xfree86-fix-build-with-xv-disabled.diff
  * Replace patch fixing out-of-tree-build:
    - 16-oot-build.diff (dirty local hack).
    + 16-construct-paths-in-doxygen.conf.diff (from upstream,
      without the gitignore hunk to get patching working).